--- a/public/css/pages.css
+++ b/public/css/pages.css
@@ -123,9 +123,8 @@ li {
 
 .fa_icon {
   font-size: 22px;
-  color: #764B0A;
+  color: black;
   cursor: pointer;
-  
 }
 
 /* トップページ */
@@ -153,7 +152,7 @@ li {
 .top_btn {
   color: #000000;
   border: 3px solid #000000;
-  width: 70%;
+  width: 60%;
   font-size: 20px;
   font-weight: bold;
   padding: 5px 0;
