--- a/public/css/form.css
+++ b/public/css/form.css
@@ -62,7 +62,7 @@ form {
 }
 
 .button-panel .button {
-  background: #f16272;
+  background: #b6e1e7;
   border: none;
   color: #fff;
   cursor: pointer;
@@ -77,7 +77,7 @@ form {
 }
 
 .button:hover {
-  background: #ee3e52;
+  background: #61bac7;
 }
 
 .form-footer {
