--- a/public/css/form.css
+++ b/public/css/form.css
@@ -56,6 +56,23 @@ form {
   outline: none;
 }
 
+.form-item textarea {
+  background: #fafafa;
+  border: none;
+  border-bottom: 2px solid #e9e9e9;
+  color: #666;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1em;
+  height: 50px;
+  transition: border-color 0.3s;
+  width: 100%;
+}
+
+.form-item textarea:focus {
+  border-bottom: 2px solid #c0c0c0;
+  outline: none;
+}
+
 .button-panel {
   margin: 2em 0 0;
   width: 100%;
@@ -110,4 +127,8 @@ form {
 
 .button_guest:focus {
 	outline:0;
+}
+
+#profile{
+  height: 100px;
 }
