--- a/public/css/users.css
+++ b/public/css/users.css
@@ -2,3 +2,17 @@
   display: flex;
   align-items: center;
 }
+
+.icon_image_prof {
+  width: 70px;
+  height: 70px;
+  border-radius: 100px;
+  object-fit: cover;
+}
+
+.icon_image_feed {
+  width: 50px;
+  height: 50px;
+  border-radius: 100px;
+  object-fit: cover;
+}
