posts/show.blade.phpにコメント欄を追加

--- a/public/css/pages.css
+++ b/public/css/pages.css
@@ -172,7 +172,11 @@ li {
 
 .home_view {
   display: flex;
-  
+}
+
+.post_view {
+  display: flex;
+  flex-direction: column;
 }
 
 .notifications{
